--- a/index.html
+++ b/index.html
@@ -1,19 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body class="font-inter">
-    <header>
-        
+    <script
+      src="https://kit.fontawesome.com/0eecd22d19.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="./output.css" />
+  </head>
+  <body class="font-inter">
+    <header class="sm:mx-[10%]">
+      <nav class="flex justify-between items-center mx-[5%] my-[5%] sm:mx-0">
+        <img
+          class="w-[63px] h-[38px] sm:w-[135px] sm:h-[82px]"
+          src="./assets/logo.png"
+          alt="Company Logo"
+        />
+        <div class="nav-icon flex">
+          <div class="hidden-menu hidden sm:block">
+            <ul class="flex gap-[48px] mr-[48px]">
+              <li><a href="#">Home</a></li>
+              <li><a class="text-[#8987a1]" href="#">Shop</a></li>
+              <li><a class="text-[#8987a1]" href="#">About us</a></li>
+            </ul>
+          </div>
+          <div class="cart-icon text">
+            <i class="fa-solid fa-cart-shopping"></i>
+            <span>Cart</span>
+            <span>($56)</span>
+          </div>
+        </div>
+      </nav>
+      <div class="hero sm:flex sm:flex-row-reverse items-center">
+        <div class="hero-banner">
+          <img class="w-[100%]" src="./assets/hero-flower.png" alt="" />
+        </div>
+        <div class="hero-content max-sm:mx-[5%] my-[10%] flex flex-col gap-[13px] sm:w-[50%]">
+          <h1 class="hero-title font-nato font-bold text-2xl sm:text-6xl w-[60%] sm:w-[100%]">ALWAYS <span class="text-[#e95a08]">FRESH</span> <span  class="text-[#e95a08]"> FLOWERS</span></h1>
+          <p class="text-[rgb(0,0,0,50%)] text-[14px] sm:text-2xl">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion.</p>
+        </div>
+      </div>
     </header>
     <main>
-
+        <section class="out-plants">
+            <div class="title font-nato font-bold text-[24px]"><span class="text-[#e95a08]">Our</span> Plants</div>
+        </section>
     </main>
-    <footer>
-
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
