--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <li><a class="text-[#8987a1]" href="#">About us</a></li>
             </ul>
           </div>
-          <div class="cart-icon text">
+          <div class="cart-icon">
             <i class="fa-solid fa-cart-shopping"></i>
             <span>Cart</span>
             <span>($56)</span>
@@ -37,16 +37,104 @@
         <div class="hero-banner">
           <img class="w-[100%]" src="./assets/hero-flower.png" alt="" />
         </div>
-        <div class="hero-content max-sm:mx-[5%] my-[10%] flex flex-col gap-[13px] sm:w-[50%]">
-          <h1 class="hero-title font-nato font-bold text-2xl sm:text-6xl w-[60%] sm:w-[100%]">ALWAYS <span class="text-[#e95a08]">FRESH</span> <span  class="text-[#e95a08]"> FLOWERS</span></h1>
-          <p class="text-[rgb(0,0,0,50%)] text-[14px] sm:text-2xl">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion.</p>
+        <div
+          class="hero-content max-sm:mx-[5%] my-[10%] flex flex-col gap-[13px] sm:w-[50%]"
+        >
+          <h1
+            class="hero-title font-nato font-bold text-2xl sm:text-6xl w-[60%] sm:w-[100%]"
+          >
+            ALWAYS <span class="text-[#e95a08]">FRESH</span>
+            <span class="text-[#e95a08]"> FLOWERS</span>
+          </h1>
+          <p
+            class="hero-subtitle text-[rgb(0,0,0,50%)] sm:text-2xl"
+          >
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From classic roses to exotic blooms, we offer a wide
+            variety of fresh flowers that are perfect for any occasion.
+          </p>
         </div>
       </div>
     </header>
     <main>
-        <section class="out-plants">
-            <div class="title font-nato font-bold text-[24px]"><span class="text-[#e95a08]">Our</span> Plants</div>
-        </section>
+      <section class="out-plants mx-[5%] sm:mx-[10%] flex flex-col items-center gap-10">
+        <h2 class="our-plants-title font-nato font-bold text-2xl sm:text-5xl">
+          <span class="text-[#e95a08]">Our</span> Plants
+        </h2>
+        <p class="our-plants-subtitle text-center text-[rgb(0,0,0,50%)] sm:text-2xl">
+          Indulge your senses with the beauty and fragrance of our fresh flower
+          shop. From classic roses to exotic blooms, we offer a wide variety of
+          fresh.
+        </p>
+        <div class="card-container grid grid-cols-2 gap-x-5 gap-y-10 sm:grid-cols-4 sm:text-2xl">
+          <div class="card flex flex-col items-center">
+            <img class="mb-[30px]" src="./assets/sample-flower-image.png" alt="" />
+            <p class="flower-name font-medium">Lily Biossom</p>
+            <p class="flower-price font-bold mb-[30px]">20 USD</p>
+            <button class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full">ADD TO CART</button>
+          </div>
+          <div class="card flex flex-col items-center">
+            <img class="mb-[30px]" src="./assets/sample-flower-image.png" alt="" />
+            <p class="flower-name font-medium">Lily Biossom</p>
+            <p class="flower-price font-bold mb-[30px]">20 USD</p>
+            <button class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full">ADD TO CART</button>
+          </div>
+          <div class="card flex flex-col items-center">
+            <img class="mb-[30px]" src="./assets/sample-flower-image.png" alt="" />
+            <p class="flower-name font-medium">Lily Biossom</p>
+            <p class="flower-price font-bold mb-[30px]">20 USD</p>
+            <button class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full">ADD TO CART</button>
+          </div>
+          <div class="card flex flex-col items-center">
+            <img class="mb-[30px]" src="./assets/sample-flower-image.png" alt="" />
+            <p class="flower-name font-medium">Lily Biossom</p>
+            <p class="flower-price font-bold mb-[30px]">20 USD</p>
+            <button class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full">ADD TO CART</button>
+          </div>
+          <div class="card flex flex-col items-center">
+            <img class="mb-[30px]" src="./assets/sample-flower-image.png" alt="" />
+            <p class="flower-name font-medium">Lily Biossom</p>
+            <p class="flower-price font-bold mb-[30px]">20 USD</p>
+            <button class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full">ADD TO CART</button>
+          </div>
+          <div class="card flex flex-col items-center">
+            <img class="mb-[30px]" src="./assets/sample-flower-image.png" alt="" />
+            <p class="flower-name font-medium">Lily Biossom</p>
+            <p class="flower-price font-bold mb-[30px]">20 USD</p>
+            <button class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full">ADD TO CART</button>
+          </div>
+          <div class="card flex flex-col items-center">
+            <img class="mb-[30px]" src="./assets/sample-flower-image.png" alt="" />
+            <p class="flower-name font-medium">Lily Biossom</p>
+            <p class="flower-price font-bold mb-[30px]">20 USD</p>
+            <button class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full">ADD TO CART</button>
+          </div>
+          <div class="card flex flex-col items-center">
+            <img class="mb-[30px]" src="./assets/sample-flower-image.png" alt="" />
+            <p class="flower-name font-medium">Lily Biossom</p>
+            <p class="flower-price font-bold mb-[30px]">20 USD</p>
+            <button class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full">ADD TO CART</button>
+          </div>
+        </div>
+        <div class="lover flex flex-col gap-5 sm:gap-15 sm:flex-row sm:mx-1.5 sm:mt-52">
+          <div class="lover-image">
+            <img class="" src="./assets/flower-store.png" alt="">
+            <div class="absolute top-515 left-122.5 w-[286px]  max-sm:hidden">
+              <img src="./assets/trusted-badge.png" alt="">
+            </div>
+          </div>
+          <div class="lover-content flex flex-col gap-5 sm:w-[50%]">
+            <h2 class="lover-title font-nato font-bold text-2xl sm:text-[3.25rem]">Flower & Plants Lover</h2>
+            <ul class="list-disc text-left ml-[5%] sm:text-2xl text-[rgb(0,0,0,50%)]">
+              <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+              <br>
+              <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+              <br>
+              <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
