our plants responsive

--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
             ALWAYS <span class="text-[#e95a08]">FRESH</span>
             <span class="text-[#e95a08]"> FLOWERS</span>
           </h1>
-          <p
-            class="hero-subtitle text-[rgb(0,0,0,50%)] sm:text-2xl"
-          >
+          <p class="hero-subtitle text-[rgb(0,0,0,50%)] sm:text-2xl">
             Indulge your senses with the beauty and fragrance of our fresh
             flower shop. From classic roses to exotic blooms, we offer a wide
             variety of fresh flowers that are perfect for any occasion.
@@ -57,83 +55,185 @@
       </div>
     </header>
     <main>
-      <section class="out-plants mx-[5%] sm:mx-[10%] flex flex-col items-center gap-10">
-        <h2 class="our-plants-title font-nato font-bold text-2xl sm:text-5xl">
+      <section
+        class="out-plants mx-[5%] sm:mx-[10%] flex flex-col items-center sm:gap-0 gap-10"
+      >
+        <h2 class="our-plants-title font-nato font-bold text-2xl sm:text-5xl sm:mb-10">
           <span class="text-[#e95a08]">Our</span> Plants
         </h2>
-        <p class="our-plants-subtitle text-center text-[rgb(0,0,0,50%)] sm:text-2xl">
+        <p
+          class="our-plants-subtitle text-center text-[rgb(0,0,0,50%)] sm:text-2xl sm:mb-10"
+        >
           Indulge your senses with the beauty and fragrance of our fresh flower
           shop. From classic roses to exotic blooms, we offer a wide variety of
           fresh.
         </p>
-        <div class="card-container grid grid-cols-2 gap-x-5 gap-y-10 sm:grid-cols-4 sm:text-2xl">
+        <div
+          class="card-container grid grid-cols-2 gap-x-5 gap-y-10 sm:grid-cols-4 sm:text-2xl"
+        >
           <div class="card flex flex-col items-center">
-            <img class="mb-[30px]" src="./assets/sample-flower-image.png" alt="" />
+            <img
+              class="mb-[30px]"
+              src="./assets/sample-flower-image.png"
+              alt=""
+            />
             <p class="flower-name font-medium">Lily Biossom</p>
             <p class="flower-price font-bold mb-[30px]">20 USD</p>
-            <button class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full">ADD TO CART</button>
+            <button
+              class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full"
+            >
+              ADD TO CART
+            </button>
           </div>
           <div class="card flex flex-col items-center">
-            <img class="mb-[30px]" src="./assets/sample-flower-image.png" alt="" />
+            <img
+              class="mb-[30px]"
+              src="./assets/sample-flower-image.png"
+              alt=""
+            />
             <p class="flower-name font-medium">Lily Biossom</p>
             <p class="flower-price font-bold mb-[30px]">20 USD</p>
-            <button class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full">ADD TO CART</button>
+            <button
+              class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full"
+            >
+              ADD TO CART
+            </button>
           </div>
           <div class="card flex flex-col items-center">
-            <img class="mb-[30px]" src="./assets/sample-flower-image.png" alt="" />
+            <img
+              class="mb-[30px]"
+              src="./assets/sample-flower-image.png"
+              alt=""
+            />
             <p class="flower-name font-medium">Lily Biossom</p>
             <p class="flower-price font-bold mb-[30px]">20 USD</p>
-            <button class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full">ADD TO CART</button>
+            <button
+              class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full"
+            >
+              ADD TO CART
+            </button>
           </div>
           <div class="card flex flex-col items-center">
-            <img class="mb-[30px]" src="./assets/sample-flower-image.png" alt="" />
+            <img
+              class="mb-[30px]"
+              src="./assets/sample-flower-image.png"
+              alt=""
+            />
             <p class="flower-name font-medium">Lily Biossom</p>
             <p class="flower-price font-bold mb-[30px]">20 USD</p>
-            <button class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full">ADD TO CART</button>
+            <button
+              class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full"
+            >
+              ADD TO CART
+            </button>
           </div>
           <div class="card flex flex-col items-center">
-            <img class="mb-[30px]" src="./assets/sample-flower-image.png" alt="" />
+            <img
+              class="mb-[30px]"
+              src="./assets/sample-flower-image.png"
+              alt=""
+            />
             <p class="flower-name font-medium">Lily Biossom</p>
             <p class="flower-price font-bold mb-[30px]">20 USD</p>
-            <button class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full">ADD TO CART</button>
+            <button
+              class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full"
+            >
+              ADD TO CART
+            </button>
           </div>
           <div class="card flex flex-col items-center">
-            <img class="mb-[30px]" src="./assets/sample-flower-image.png" alt="" />
+            <img
+              class="mb-[30px]"
+              src="./assets/sample-flower-image.png"
+              alt=""
+            />
             <p class="flower-name font-medium">Lily Biossom</p>
             <p class="flower-price font-bold mb-[30px]">20 USD</p>
-            <button class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full">ADD TO CART</button>
+            <button
+              class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full"
+            >
+              ADD TO CART
+            </button>
           </div>
           <div class="card flex flex-col items-center">
-            <img class="mb-[30px]" src="./assets/sample-flower-image.png" alt="" />
+            <img
+              class="mb-[30px]"
+              src="./assets/sample-flower-image.png"
+              alt=""
+            />
             <p class="flower-name font-medium">Lily Biossom</p>
             <p class="flower-price font-bold mb-[30px]">20 USD</p>
-            <button class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full">ADD TO CART</button>
+            <button
+              class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full"
+            >
+              ADD TO CART
+            </button>
           </div>
           <div class="card flex flex-col items-center">
-            <img class="mb-[30px]" src="./assets/sample-flower-image.png" alt="" />
+            <img
+              class="mb-[30px]"
+              src="./assets/sample-flower-image.png"
+              alt=""
+            />
             <p class="flower-name font-medium">Lily Biossom</p>
             <p class="flower-price font-bold mb-[30px]">20 USD</p>
-            <button class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full">ADD TO CART</button>
+            <button
+              class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full"
+            >
+              ADD TO CART
+            </button>
           </div>
         </div>
-        <div class="lover flex flex-col gap-5 sm:gap-15 sm:flex-row sm:mx-1.5 sm:mt-52">
-          <div class="lover-image">
-            <img class="" src="./assets/flower-store.png" alt="">
-            <div class="absolute top-515 left-122.5 w-[286px]  max-sm:hidden">
-              <img src="./assets/trusted-badge.png" alt="">
-            </div>
-          </div>
-          <div class="lover-content flex flex-col gap-5 sm:w-[50%]">
-            <h2 class="lover-title font-nato font-bold text-2xl sm:text-[3.25rem]">Flower & Plants Lover</h2>
-            <ul class="list-disc text-left ml-[5%] sm:text-2xl text-[rgb(0,0,0,50%)]">
-              <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
-              <br>
-              <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
-              <br>
-              <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+        <img
+          class="relative top-40 -left-20 w-[286px] max-sm:hidden"
+          src="./assets/trusted-badge.png"
+          alt=""
+        />
+        <div
+          class="lover flex flex-col justify-between gap-5 sm:gap-15 sm:flex-row"
+        >
+          <img class="" src="./assets/flower-store.png" alt="" />
+
+          <div class="lover-content flex flex-col gap-5 sm:w-[60%]">
+            <h2
+              class="lover-title font-nato font-bold text-2xl sm:text-[3.25rem]"
+            >
+              Flower & Plants Lover
+            </h2>
+            <ul
+              class="list-disc text-left ml-[5%] sm:text-2xl text-[rgb(0,0,0,50%)]"
+            >
+              <li>
+                Indulge your senses with the beauty and fragrance of our fresh
+                flower shop. From classic roses to exotic blooms, we offer a
+                wide variety of fresh.
+              </li>
+              <br />
+              <li>
+                Indulge your senses with the beauty and fragrance of our fresh
+                flower shop. From classic roses to exotic blooms, we offer a
+                wide variety of fresh.
+              </li>
+              <br />
+              <li>
+                Indulge your senses with the beauty and fragrance of our fresh
+                flower shop. From classic roses to exotic blooms, we offer a
+                wide variety of fresh.
+              </li>
             </ul>
           </div>
         </div>
+      </section>
+      <section class="latest-deals">
+        <h2 class="latest-deals-title font-bold text-2xl font-nato">
+          <span class="text-[#e95a08]">Latest</span> Deals
+        </h2>
+        <p class="text-[rgb(0,0,0,50%)]">
+          Indulge your senses with the beauty and fragrance of our fresh flower
+          shop. From classic roses to exotic blooms, we offer a wide variety of
+          fresh.
+        </p>
+        <div class="container"></div>
       </section>
     </main>
     <footer></footer>
