--- a/index.html
+++ b/index.html
@@ -4,20 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script
-      src="https://kit.fontawesome.com/0eecd22d19.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/0eecd22d19.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./output.css" />
   </head>
   <body class="font-inter">
     <header class="sm:mx-[10%]">
       <nav class="flex justify-between items-center mx-[5%] my-[5%] sm:mx-0">
-        <img
-          class="w-[63px] h-[38px] sm:w-[135px] sm:h-[82px]"
-          src="./assets/logo.png"
-          alt="Company Logo"
-        />
+        <a href="#"><img class="w-[63px] h-[38px] sm:w-[135px] sm:h-[82px]" src="./assets/logo.png" alt="Company Logo" /></a>
         <div class="nav-icon flex">
           <div class="hidden-menu hidden sm:block">
             <ul class="flex gap-[48px] mr-[48px]">
@@ -33,209 +26,156 @@
           </div>
         </div>
       </nav>
+
       <div class="hero sm:flex sm:flex-row-reverse items-center">
         <div class="hero-banner">
           <img class="w-[100%]" src="./assets/hero-flower.png" alt="" />
         </div>
-        <div
-          class="hero-content max-sm:mx-[5%] my-[10%] flex flex-col gap-[13px] sm:w-[50%]"
-        >
-          <h1
-            class="hero-title font-nato font-bold text-2xl sm:text-6xl w-[60%] sm:w-[100%]"
-          >
+        <div class="hero-content max-sm:mx-[5%] my-[10%] flex flex-col gap-[13px] sm:w-[50%]">
+          <h1 class="hero-title font-nato font-bold text-2xl sm:text-6xl w-[60%] sm:w-[100%]">
             ALWAYS <span class="text-[#e95a08]">FRESH</span>
             <span class="text-[#e95a08]"> FLOWERS</span>
           </h1>
-          <p class="hero-subtitle text-[rgb(0,0,0,50%)] sm:text-2xl">
-            Indulge your senses with the beauty and fragrance of our fresh
-            flower shop. From classic roses to exotic blooms, we offer a wide
-            variety of fresh flowers that are perfect for any occasion.
-          </p>
+          <p class="hero-subtitle text-[rgb(0,0,0,50%)] sm:text-2xl">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion.</p>
         </div>
       </div>
     </header>
+
     <main>
-      <section
-        class="out-plants mx-[5%] sm:mx-[10%] flex flex-col items-center sm:gap-0 gap-10"
-      >
-        <h2 class="our-plants-title font-nato font-bold text-2xl sm:text-5xl sm:mb-10">
-          <span class="text-[#e95a08]">Our</span> Plants
-        </h2>
-        <p
-          class="our-plants-subtitle text-center text-[rgb(0,0,0,50%)] sm:text-2xl sm:mb-10"
-        >
-          Indulge your senses with the beauty and fragrance of our fresh flower
-          shop. From classic roses to exotic blooms, we offer a wide variety of
-          fresh.
-        </p>
-        <div
-          class="card-container grid grid-cols-2 gap-x-5 gap-y-10 sm:grid-cols-4 sm:text-2xl"
-        >
+      <section class="out-plants mx-[5%] sm:mx-[10%] flex flex-col items-center sm:gap-0 gap-10">
+        <h2 class="our-plants-title font-nato font-bold text-2xl sm:text-5xl sm:mb-10"><span class="text-[#e95a08]">Our</span> Plants</h2>
+        <p class="our-plants-subtitle text-center text-[rgb(0,0,0,50%)] sm:text-2xl sm:mb-30 sm:w-[80%]">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+        <div class="card-container grid grid-cols-2 gap-x-5 gap-y-10 sm:grid-cols-4 sm:text-2xl">
           <div class="card flex flex-col items-center">
-            <img
-              class="mb-[30px]"
-              src="./assets/sample-flower-image.png"
-              alt=""
-            />
+            <img class="mb-[30px]" src="./assets/sample-flower-image.png" alt="" />
             <p class="flower-name font-medium">Lily Biossom</p>
             <p class="flower-price font-bold mb-[30px]">20 USD</p>
-            <button
-              class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full"
-            >
-              ADD TO CART
-            </button>
+            <button class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full">ADD TO CART</button>
           </div>
           <div class="card flex flex-col items-center">
-            <img
-              class="mb-[30px]"
-              src="./assets/sample-flower-image.png"
-              alt=""
-            />
+            <img class="mb-[30px]" src="./assets/sample-flower-image.png" alt="" />
             <p class="flower-name font-medium">Lily Biossom</p>
             <p class="flower-price font-bold mb-[30px]">20 USD</p>
-            <button
-              class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full"
-            >
-              ADD TO CART
-            </button>
+            <button class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full">ADD TO CART</button>
           </div>
           <div class="card flex flex-col items-center">
-            <img
-              class="mb-[30px]"
-              src="./assets/sample-flower-image.png"
-              alt=""
-            />
+            <img class="mb-[30px]" src="./assets/sample-flower-image.png" alt="" />
             <p class="flower-name font-medium">Lily Biossom</p>
             <p class="flower-price font-bold mb-[30px]">20 USD</p>
-            <button
-              class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full"
-            >
-              ADD TO CART
-            </button>
+            <button class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full">ADD TO CART</button>
           </div>
           <div class="card flex flex-col items-center">
-            <img
-              class="mb-[30px]"
-              src="./assets/sample-flower-image.png"
-              alt=""
-            />
+            <img class="mb-[30px]" src="./assets/sample-flower-image.png" alt="" />
             <p class="flower-name font-medium">Lily Biossom</p>
             <p class="flower-price font-bold mb-[30px]">20 USD</p>
-            <button
-              class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full"
-            >
-              ADD TO CART
-            </button>
+            <button class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full">ADD TO CART</button>
           </div>
           <div class="card flex flex-col items-center">
-            <img
-              class="mb-[30px]"
-              src="./assets/sample-flower-image.png"
-              alt=""
-            />
+            <img class="mb-[30px]" src="./assets/sample-flower-image.png" alt="" />
             <p class="flower-name font-medium">Lily Biossom</p>
             <p class="flower-price font-bold mb-[30px]">20 USD</p>
-            <button
-              class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full"
-            >
-              ADD TO CART
-            </button>
+            <button class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full">ADD TO CART</button>
           </div>
           <div class="card flex flex-col items-center">
-            <img
-              class="mb-[30px]"
-              src="./assets/sample-flower-image.png"
-              alt=""
-            />
+            <img class="mb-[30px]" src="./assets/sample-flower-image.png" alt="" />
             <p class="flower-name font-medium">Lily Biossom</p>
             <p class="flower-price font-bold mb-[30px]">20 USD</p>
-            <button
-              class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full"
-            >
-              ADD TO CART
-            </button>
+            <button class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full">ADD TO CART</button>
           </div>
           <div class="card flex flex-col items-center">
-            <img
-              class="mb-[30px]"
-              src="./assets/sample-flower-image.png"
-              alt=""
-            />
+            <img class="mb-[30px]" src="./assets/sample-flower-image.png" alt="" />
             <p class="flower-name font-medium">Lily Biossom</p>
             <p class="flower-price font-bold mb-[30px]">20 USD</p>
-            <button
-              class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full"
-            >
-              ADD TO CART
-            </button>
+            <button class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full">ADD TO CART</button>
           </div>
           <div class="card flex flex-col items-center">
-            <img
-              class="mb-[30px]"
-              src="./assets/sample-flower-image.png"
-              alt=""
-            />
+            <img class="mb-[30px]" src="./assets/sample-flower-image.png" alt="" />
             <p class="flower-name font-medium">Lily Biossom</p>
             <p class="flower-price font-bold mb-[30px]">20 USD</p>
-            <button
-              class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full"
-            >
-              ADD TO CART
-            </button>
+            <button class="bg-[#e95a08] font-semibold text-white px-[20px] py-[15px] w-full">ADD TO CART</button>
           </div>
         </div>
-        <img
-          class="relative top-40 -left-20 w-[286px] max-sm:hidden"
-          src="./assets/trusted-badge.png"
-          alt=""
-        />
-        <div
-          class="lover flex flex-col justify-between gap-5 sm:gap-15 sm:flex-row"
-        >
+
+        <img class="relative top-40 -left-20 w-[286px] max-sm:hidden" src="./assets/trusted-badge.png" alt="" />
+        <div class="lover flex flex-col justify-between gap-5 sm:gap-15 sm:flex-row">
           <img class="" src="./assets/flower-store.png" alt="" />
 
           <div class="lover-content flex flex-col gap-5 sm:w-[60%]">
-            <h2
-              class="lover-title font-nato font-bold text-2xl sm:text-[3.25rem]"
-            >
-              Flower & Plants Lover
-            </h2>
-            <ul
-              class="list-disc text-left ml-[5%] sm:text-2xl text-[rgb(0,0,0,50%)]"
-            >
-              <li>
-                Indulge your senses with the beauty and fragrance of our fresh
-                flower shop. From classic roses to exotic blooms, we offer a
-                wide variety of fresh.
-              </li>
+            <h2 class="lover-title font-nato font-bold text-2xl sm:text-[3.25rem]">Flower & Plants Lover</h2>
+            <ul class="list-disc text-left ml-[5%] sm:text-2xl text-[rgb(0,0,0,50%)]">
+              <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
               <br />
-              <li>
-                Indulge your senses with the beauty and fragrance of our fresh
-                flower shop. From classic roses to exotic blooms, we offer a
-                wide variety of fresh.
-              </li>
+              <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
               <br />
-              <li>
-                Indulge your senses with the beauty and fragrance of our fresh
-                flower shop. From classic roses to exotic blooms, we offer a
-                wide variety of fresh.
-              </li>
+              <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
             </ul>
           </div>
         </div>
       </section>
-      <section class="latest-deals">
-        <h2 class="latest-deals-title font-bold text-2xl font-nato">
-          <span class="text-[#e95a08]">Latest</span> Deals
-        </h2>
-        <p class="text-[rgb(0,0,0,50%)]">
-          Indulge your senses with the beauty and fragrance of our fresh flower
-          shop. From classic roses to exotic blooms, we offer a wide variety of
-          fresh.
-        </p>
-        <div class="container"></div>
+
+      <section class="latest-deals flex flex-col items-center mx-[5%] sm:mx-[10%] mt-24 gap-5">
+        <h2 class="latest-deals-title font-bold sm:text-5xl text-2xl font-nato sm:mb-5"><span class="text-[#e95a08]">Latest</span> Deals</h2>
+        <p class="text-[rgb(0,0,0,50%)] text-center sm:w-[80%] sm:text-2xl mb-10 sm:mb-30">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+        <div class="grid-container grid grid-cols-12 gap-5 sm:gap-10 w-full text-white">
+          <div class="grid-element h-50 col-span-12 sm:col-span-4 bg-[url(./assets/deal-bloom.png)] bg-center rounded-2xl flex flex-col justify-center items-center bg-gray-400 bg-blend-multiply bg-cover">
+            <p class="font-nato font-bold text-2xl">60% Off | Bloom Plant</p>
+            <a class="underline font-semibold" href="#">Shop Now</a>
+          </div>
+          <div class="max-sm:order-3 grid-element max-sm:h-50 col-span-12 sm:col-span-8 sm:row-span-2 bg-[url(./assets/deal-zabo.png)] bg-center rounded-2xl flex flex-col justify-center items-center bg-gray-400 bg-blend-multiply bg-cover">
+            <p class="font-nato font-bold text-2xl sm:text-4xl">25% Off | Zabo Plant</p>
+            <a class="underline font-semibold sm:text-3xl" href="#">Shop Now</a>
+          </div>
+          <div class="grid-element h-50 col-span-12 sm:col-span-4 bg-[url(./assets/deal-ana.png)] bg-center rounded-2xl flex flex-col justify-center items-center bg-gray-400 bg-blend-multiply bg-cover">
+            <p class="font-nato font-bold text-2xl">30% Off | Ana Plant</p>
+            <a class="underline font-semibold" href="#">Shop Now</a>
+          </div>
+        </div>
+      </section>
+
+      <section class="join-us bg-[url(./assets/news-letter-bg.png)] h-60 sm:h-135 mt-10 bg-center bg-cover text-white flex flex-col justify-center items-center bg-gray-400 bg-blend-multiply">
+        <h2 class="font-nato font-bold text-[20px] sm:text-2xl mb-2.5">Join the colorful Bunch</h2>
+        <form class="flex" action="">
+          <input class="bg-white text-black py-4 pl-5 sm:w-[500px] h-12" type="email" placeholder="Write email" />
+          <button class="bg-[#e95a08] border-[#e95a08] px-6 sm:px-12 h-12 font-semibold">Subscribe</button>
+        </form>
       </section>
     </main>
-    <footer></footer>
+
+    <footer class="sm:m-12 m-5 flex flex-col sm:flex-row sm:justify-around gap-y-5 text-[rgb(0,0,0,50%)]">
+      <div class="footer-logo flex flex-col gap-5 sm:w-[20%]">
+        <img class="w-[50%] sm:w-[135px]" src="./assets/logo.png" alt="" />
+        <p>Indulge your senses with the beauty and fragrance of our fresh flower shop.</p>
+      </div>
+      <div class="footer-links">
+        <ul class="flex flex-col gap-y-5 sm:gap-x-20 sm:grid sm:grid-cols-2">
+          <li><a href="">Home</a></li>
+          <li><a href="">About Us</a></li>
+          <li><a href="">Blog</a></li>
+          <li><a href="">FAQ</a></li>
+          <li><a href="">Contact Us</a></li>
+          <li><a href="">Features</a></li>
+          <li><a href="">Pricing</a></li>
+          <li><a href="">Privacy Policy</a></li>
+          <li><a href="">Terms of Service</a></li>
+          <li><a href="">Help Center</a></li>
+        </ul>
+      </div>
+      <div class="footer-social-icon">
+        <ul class="flex flex-row gap-5 items-center">
+          <li>
+            <a href=""><img src="./assets/icon-linkedin.png" alt="" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./assets/icon-twitter.png" alt="" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./assets/icon-facebook.png" alt="" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./assets/icon-youtube.png" alt="" /></a>
+          </li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
