--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Faugei</title>
+    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/0eecd22d19.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./output.css" />
   </head>
