--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
       </nav>
 
-      <div class="hero sm:flex sm:flex-row-reverse items-center">
+      <div class="hero sm:flex sm:flex-row-reverse justify-between items-center">
         <div class="hero-banner">
           <img class="w-[100%]" src="./assets/hero-flower.png" alt="" />
         </div>
