trusted badge rerponsive

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Faugei</title>
-    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon" />
     <script src="https://kit.fontawesome.com/0eecd22d19.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./output.css" />
   </head>
@@ -97,11 +97,13 @@
           </div>
         </div>
 
-        <img class="relative top-40 -left-20 w-[286px] max-sm:hidden" src="./assets/trusted-badge.png" alt="" />
-        <div class="lover flex flex-col justify-between gap-5 sm:gap-15 sm:flex-row">
-          <img class="" src="./assets/flower-store.png" alt="" />
-
-          <div class="lover-content flex flex-col gap-5 sm:w-[60%]">
+        <div class="lover flex flex-col justify-between gap-5 sm:gap-15 sm:flex-row sm:mt-50">
+          <div class="lover-image sm:w-[540px] max-sm:h-[540px] bg-[url(./assets/flower-store.png)] bg-no-repeat">
+            <div class="trusted w-[286px] relative -top-30 -right-85">
+              <img class="max-sm:hidden" src="./assets/trusted-badge.png" alt="">
+            </div>
+          </div>
+          <div class="lover-content self-end flex flex-col gap-5 sm:w-[540px]">
             <h2 class="lover-title font-nato font-bold text-2xl sm:text-[3.25rem]">Flower & Plants Lover</h2>
             <ul class="list-disc text-left ml-[5%] sm:text-2xl text-[rgb(0,0,0,50%)]">
               <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
