--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
         </div>
 
         <div class="lover flex flex-col justify-between gap-5 sm:gap-15 sm:flex-row sm:mt-50">
-          <div class="lover-image sm:w-[540px] max-sm:h-[540px] bg-[url(./assets/flower-store.png)] bg-no-repeat">
+          <div class="lover-image sm:w-[540px] max-sm:h-[540px] bg-[url(./assets/flower-store.png)] bg-no-repeat bg-center">
             <div class="trusted w-[286px] relative -top-30 -right-85">
               <img class="max-sm:hidden" src="./assets/trusted-badge.png" alt="">
             </div>
           </div>
-          <div class="lover-content self-end flex flex-col gap-5 sm:w-[540px]">
+          <div class="lover-content self-end flex flex-col gap-5 sm:w-[550px]">
             <h2 class="lover-title font-nato font-bold text-2xl sm:text-[3.25rem]">Flower & Plants Lover</h2>
             <ul class="list-disc text-left ml-[5%] sm:text-2xl text-[rgb(0,0,0,50%)]">
               <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
