--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script src="https://kit.fontawesome.com/0eecd22d19.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./output.css" />
   </head>
-  <body class="font-inter">
-    <header class="sm:mx-[10%]">
+  <body class="font-inter flex flex-col items-center">
+    <header class="sm:mx-[10%] max-w-[1140px]">
       <nav class="flex justify-between items-center mx-[5%] my-[5%] sm:mx-0">
         <a href="#"><img class="w-[63px] h-[38px] sm:w-[135px] sm:h-[82px]" src="./assets/logo.png" alt="Company Logo" /></a>
         <div class="nav-icon flex">
@@ -42,7 +42,7 @@
       </div>
     </header>
 
-    <main>
+    <main class="flex flex-col items-center">
       <section class="out-plants mx-[5%] sm:mx-[10%] flex flex-col items-center sm:gap-0 gap-10">
         <h2 class="our-plants-title font-nato font-bold text-2xl sm:text-5xl sm:mb-10"><span class="text-[#e95a08]">Our</span> Plants</h2>
         <p class="our-plants-subtitle text-center text-[rgb(0,0,0,50%)] sm:text-2xl sm:mb-30 sm:w-[80%]">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
@@ -116,7 +116,7 @@
         </div>
       </section>
 
-      <section class="latest-deals flex flex-col items-center mx-[5%] sm:mx-[10%] mt-24 gap-5">
+      <section class="latest-deals flex flex-col items-center mx-[5%] sm:mx-[10%] mt-24 gap-5 max-w-[1140px]">
         <h2 class="latest-deals-title font-bold sm:text-5xl text-2xl font-nato sm:mb-5"><span class="text-[#e95a08]">Latest</span> Deals</h2>
         <p class="text-[rgb(0,0,0,50%)] text-center sm:w-[80%] sm:text-2xl mb-10 sm:mb-30">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
         <div class="grid-container grid grid-cols-12 gap-5 sm:gap-10 w-full text-white">
@@ -135,7 +135,7 @@
         </div>
       </section>
 
-      <section class="join-us bg-[url(./assets/news-letter-bg.png)] h-60 sm:h-135 mt-10 bg-center bg-cover text-white flex flex-col justify-center items-center bg-gray-400 bg-blend-multiply">
+      <section class="join-us bg-[url(./assets/news-letter-bg.png)] h-60 sm:h-135 mt-10 w-[100%] bg-center bg-cover text-white flex flex-col justify-center items-center bg-gray-400 bg-blend-multiply">
         <h2 class="font-nato font-bold text-[20px] sm:text-2xl mb-2.5">Join the colorful Bunch</h2>
         <form class="flex" action="">
           <input class="bg-white text-black py-4 pl-5 sm:w-[500px] h-12" type="email" placeholder="Write email" />
