--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./output.css" />
   </head>
   <body class="font-inter flex flex-col items-center">
-    <header class="sm:mx-[10%] max-w-[1140px]">
+    <header class="sm:mx-[10%]">
       <nav class="flex justify-between items-center mx-[5%] my-[5%] sm:mx-0">
         <a href="#"><img class="w-[63px] h-[38px] sm:w-[135px] sm:h-[82px]" src="./assets/logo.png" alt="Company Logo" /></a>
         <div class="nav-icon flex">
