--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       </section>
     </main>
 
-    <footer class="sm:m-12 m-5 flex flex-col sm:flex-row sm:justify-between gap-y-5 text-[rgb(0,0,0,50%)]">
+    <footer class="sm:m-12 m-5 flex flex-col sm:flex-row sm:justify-around w-[100%] gap-y-5 text-[rgb(0,0,0,50%)]">
       <div class="footer-logo flex flex-col gap-5 sm:w-[20%]">
         <img class="w-[50%] sm:w-[135px]" src="./assets/logo.png" alt="" />
         <p>Indulge your senses with the beauty and fragrance of our fresh flower shop.</p>
