--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
         <img class="w-[50%] sm:w-[135px]" src="./assets/logo.png" alt="" />
         <p>Indulge your senses with the beauty and fragrance of our fresh flower shop.</p>
       </div>
-      <div class="footer-links">
-        <ul class="flex flex-col gap-y-5 sm:gap-x-20 sm:grid sm:grid-cols-2">
+      <div class="footer-links w-[33.33%]">
+        <ul class="flex flex-col gap-y-5 sm:grid sm:grid-cols-2">
           <li><a href="">Home</a></li>
           <li><a href="">About Us</a></li>
           <li><a href="">Blog</a></li>
