--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <section class="out-plants mx-[5%] sm:mx-[10%] flex flex-col items-center sm:gap-0 gap-10">
         <h2 class="our-plants-title font-nato font-bold text-2xl sm:text-5xl sm:mb-10"><span class="text-[#e95a08]">Our</span> Plants</h2>
         <p class="our-plants-subtitle text-center text-[rgb(0,0,0,50%)] sm:text-2xl sm:mb-30 sm:w-[80%]">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
-        <div class="card-container grid grid-cols-2 gap-x-5 gap-y-10 sm:grid-cols-4 sm:text-2xl">
+        <div class="card-container grid grid-cols-2 gap-10 sm:grid-cols-4 sm:text-2xl">
           <div class="card flex flex-col items-center">
             <img class="mb-[30px]" src="./assets/sample-flower-image.png" alt="" />
             <p class="flower-name font-medium">Lily Biossom</p>
@@ -116,7 +116,7 @@
         </div>
       </section>
 
-      <section class="latest-deals flex flex-col items-center mx-[5%] sm:mx-[10%] mt-24 gap-5 max-w-[1140px]">
+      <section class="latest-deals flex flex-col items-center mx-[5%] sm:mx-[10%] mb-y-24 gap-5 max-w-[1140px]">
         <h2 class="latest-deals-title font-bold sm:text-5xl text-2xl font-nato sm:mb-5"><span class="text-[#e95a08]">Latest</span> Deals</h2>
         <p class="text-[rgb(0,0,0,50%)] text-center sm:w-[80%] sm:text-2xl mb-10 sm:mb-30">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
         <div class="grid-container grid grid-cols-12 gap-5 sm:gap-10 w-full text-white">
