--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main class="flex flex-col items-center">
       <section class="out-plants mx-[5%] sm:mx-[10%] flex flex-col items-center sm:gap-0 gap-10">
         <h2 class="our-plants-title font-nato font-bold text-2xl sm:text-5xl sm:mb-10"><span class="text-[#e95a08]">Our</span> Plants</h2>
-        <p class="our-plants-subtitle text-center text-[rgb(0,0,0,50%)] sm:text-2xl sm:mb-30 sm:w-[80%]">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+        <p class="our-plants-subtitle text-center text-[rgb(0,0,0,50%)] sm:text-2xl sm:mb-20 sm:w-[80%]">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
         <div class="card-container grid grid-cols-2 gap-10 sm:grid-cols-4 sm:text-2xl">
           <div class="card flex flex-col items-center">
             <img class="mb-[30px]" src="./assets/sample-flower-image.png" alt="" />
@@ -116,9 +116,9 @@
         </div>
       </section>
 
-      <section class="latest-deals flex flex-col items-center mx-[5%] sm:mx-[10%] mb-y-24 gap-5 max-w-[1140px]">
+      <section class="latest-deals flex flex-col items-center mx-[5%] sm:mx-[10%] mb-24 gap-5 max-w-[1140px] sm:mt-30">
         <h2 class="latest-deals-title font-bold sm:text-5xl text-2xl font-nato sm:mb-5"><span class="text-[#e95a08]">Latest</span> Deals</h2>
-        <p class="text-[rgb(0,0,0,50%)] text-center sm:w-[80%] sm:text-2xl mb-10 sm:mb-30">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+        <p class="text-[rgb(0,0,0,50%)] text-center sm:w-[80%] sm:text-2xl mb-10 sm:mb-10">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
         <div class="grid-container grid grid-cols-12 gap-5 sm:gap-10 w-full text-white">
           <div class="grid-element h-50 col-span-12 sm:col-span-4 bg-[url(./assets/deal-bloom.png)] bg-center rounded-2xl flex flex-col justify-center items-center bg-gray-400 bg-blend-multiply bg-cover">
             <p class="font-nato font-bold text-2xl">60% Off | Bloom Plant</p>
