--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
 
         <div class="lover flex flex-col justify-between gap-5 sm:gap-15 sm:flex-row sm:mt-50">
-          <div class="lover-image sm:w-[540px] max-sm:h-[540px] bg-[url(./assets/flower-store.png)] bg-no-repeat bg-center">
+          <div class="lover-image sm:w-[540px] max-sm:h-dvw bg-[url(./assets/flower-store.png)] bg-no-repeat bg-center">
             <div class="trusted w-[286px] relative -top-30 -right-85">
               <img class="max-sm:hidden" src="./assets/trusted-badge.png" alt="">
             </div>
