--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="lover flex flex-col justify-between gap-5 sm:gap-15 sm:flex-row sm:mt-50">
           <div class="lover-image sm:w-[540px] max-sm:h-dvw bg-[url(./assets/flower-store.png)] bg-no-repeat bg-center">
             <div class="trusted w-[286px] relative -top-30 -right-85">
-              <img class="max-sm:hidden" src="./assets/trusted-badge.png" alt="">
+              <img class="max-sm:hidden" src="./assets/trusted-badge.png" alt="" />
             </div>
           </div>
           <div class="lover-content self-end flex flex-col gap-5 sm:w-[550px]">
