--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         </div>
       </section>
 
-      <section class="join-us bg-[url(./assets/news-letter-bg.png)] h-60 sm:h-135 mt-10 w-[100%] xl:w-[100vw] bg-center bg-cover text-white flex flex-col justify-center items-center bg-gray-400 bg-blend-multiply">
+      <section class="join-us bg-[url(./assets/news-letter-bg.png)] h-60 sm:h-135 mt-10 w-[100%] xl:w-dvw wra bg-center bg-cover text-white flex flex-col justify-center items-center bg-gray-400 bg-blend-multiply">
         <h2 class="font-nato font-bold text-[20px] sm:text-2xl mb-2.5">Join the colorful Bunch</h2>
         <form class="flex w-[70vw] items-center justify-center" action="">
           <input class="bg-white text-black py-4 pl-5 sm:w-[500px] h-12" type="email" placeholder="Write email" />
