--- a/index.html
+++ b/index.html
@@ -134,16 +134,14 @@
           </div>
         </div>
       </section>
-
-      <section class="join-us bg-[url(./assets/news-letter-bg.png)] h-60 sm:h-135 mt-10 w-[100%] xl:w-dvw wra bg-center bg-cover text-white flex flex-col justify-center items-center bg-gray-400 bg-blend-multiply">
-        <h2 class="font-nato font-bold text-[20px] sm:text-2xl mb-2.5">Join the colorful Bunch</h2>
-        <form class="flex w-[70vw] items-center justify-center" action="">
-          <input class="bg-white text-black py-4 pl-5 sm:w-[500px] h-12" type="email" placeholder="Write email" />
-          <button class="bg-[#e95a08] border-[#e95a08] px-6 sm:px-12 h-12 font-semibold">Subscribe</button>
-        </form>
-      </section>
     </main>
-
+    <section class="join-us bg-[url(./assets/news-letter-bg.png)] h-60 sm:h-135 mt-10 w-[100%] wra bg-center bg-cover text-white flex flex-col justify-center items-center bg-gray-400 bg-blend-multiply">
+      <h2 class="font-nato font-bold text-[20px] sm:text-2xl mb-2.5">Join the colorful Bunch</h2>
+      <form class="flex w-[70vw] items-center justify-center" action="">
+        <input class="bg-white text-black py-4 pl-5 sm:w-[500px] h-12" type="email" placeholder="Write email" />
+        <button class="bg-[#e95a08] border-[#e95a08] px-6 sm:px-12 h-12 font-semibold">Subscribe</button>
+      </form>
+    </section>
     <footer class="sm:m-12 my-10 flex flex-col sm:flex-row sm:justify-around w-[90%] gap-y-5 text-[rgb(0,0,0,50%)]">
       <div class="footer-logo flex flex-col gap-5 sm:w-[20%]">
         <img class="w-[50%] sm:w-[135px]" src="./assets/logo.png" alt="" />
